<resources>
    <string name="app_name">ChineChat</string>
    <string name="chine_chat">Chine Chat</string>
    <string name="email">E-MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="lbsignup">CREATE ACCOUNT</string>
    <string name="signup">CREATE ACCOUNT</string>
    <string name="btnsignup">CREATE ACCOUNT</string>
    <string name="displayname">DISPLAY NAME</string>
    <string name="lb_email">ENTER E-MAIL</string>
    <string name="lb_password">ENTER PASSWORD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_menu">Setting</string>
    <string name="logout_menu">Logout</string>
    <string name="change_pic">CHANGE PROFILE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="status_change">STATUS</string>
    <string name="update_status">UPDATE STATUS</string>
    <string name="chat">CHAT</string>
</resources>